# Axon

./: .gitignore  Axon.sln  CMakeLists.txt
Compute/Axon/: Axon.csproj
Compute/Axon.Cuda/: Axon.Cuda.csproj  Axon.Cuda.csproj.DotSettings
Compute/Axon.Cuda.Native/: CMakeLists.txt
Compute/Axon.Cuda.Native/src/: core.cu  core.cuh  functions_operations.cu  functions_operations.cuh  memory.cu  multiplication.cu  multiplication.cuh  pointwise_operations.cu  range.cuh  scalar.cu  sum.cuh  transformations.cu  transformations.cuh  transpose.cuh
Compute/Axon.Cuda/Buffers/: GlobalMemory.cs  GlobalMemoryAllocator.cs  GpuBuffer.cs
Compute/Axon.Cuda/Common/: Dll.cs
Compute/Axon.Cuda/Debug/: CudaErrorCode.cs  NvtxRange.cs
Compute/Axon.Cuda/Exceptions/: CudaExceptionBase.cs  CudaInitializationException.cs  CudaInsufficientDriverException.cs  CudaInvalidChannelDescriptorException.cs  CudaInvalidConfigurationException.cs  CudaInvalidDeviceException.cs  CudaInvalidDeviceFunctionException.cs  CudaInvalidDevicePointerException.cs  CudaInvalidFilterSettingException.cs  CudaInvalidMemcpyDirectionException.cs  CudaInvalidNormSettingException.cs  CudaInvalidPitchValueException.cs  CudaInvalidPtxException.cs  CudaInvalidResourceHandleException.cs  CudaInvalidSymbolException.cs  CudaInvalidTextureBindingException.cs  CudaInvalidTextureException.cs  CudaInvalidValueException.cs  CudaJitCompilationDisabledException.cs  CudaJitCompilerNotFoundException.cs  CudaLaunchFailureException.cs  CudaLaunchOutOfResourcesException.cs  CudaLaunchTimeoutException.cs  CudaMemoryAllocationException.cs  CudaMissingConfigurationException.cs  CudaNoDeviceException.cs  CudaNoKernelImageForDeviceException.cs  CudaSetOnActiveProcessException.cs  CudaStartupFailureException.cs  CudaUnknownException.cs  CudaUnmapBufferObjectFailedException.cs  CudaUnsupportedPtxVersionException.cs
Compute/Axon.Cuda/Nvtx/: NvtxRange.cs
Compute/Axon.Cuda/Operations/: CudaMatrixAcceleration.cs  GpuMatrixOperations.cs
Compute/Axon/Exceptions/: DimensionsMismatchException.cs
Compute/Axon/Helpers/: BatchMatrixHelper.cs
Services/Axon.Sandbox/: Axon.Sandbox.csproj  Program.cs  appsettings.json
Services/Axon.Sandbox/Properties/: launchSettings.json
apps/: CMakeLists.txt  EntryPoint.cu  main.cu
include/Axon/: Core.cuh  Types.cuh
include/Axon/Math/: Vector.cuh
include/core/: blob.cuh  compute.cuh  layer.cuh  loss.cuh  mnist.cuh  network.cuh
src/: CMakeLists.txt  Core.cu  Vector.cu  layer.cu  loss.cu  main.cu  mnist.cu  network.cu
src/Axon/: Axon.csproj
src/Axon.Cuda.Native/scripts/: CopyOutputDll.ps1
src/Axon.Cuda.Native/src/: memory.cuh  pointwise_operations.cuh  range.cu  scalar.cuh  sum.cu  transpose.cu
src/Axon.Cuda/Debug/: CudaAssert.cs
src/Axon.Cuda/Exceptions/: CudaExceptionBase.cs
src/Axon/Helpers/: BatchMatrixHelper.cs
src/Core/: Activation.cu  Activation.cuh  Interop.cuh  Library.cuh  Matrix.cu  Matrix.cuh  Random.cu  Random.cuh
src/Data/: Dataset.cu  Dataset.cuh  OneHot.cu  OneHot.cuh
src/Kernels/: ActivationKernels.cu  ActivationKernels.cuh  PointwiseKernels.cu  PointwiseKernels.cuh  TransformationKernels.cu  TransformationKernels.cuh
src/Neural/: NeuralNetwork.cu  NeuralNetwork.cuh  Random.cuh  UniformDistribution.cu  UniformDistribution.cuh
tests/Axon.Sandbox/: Axon.Sandbox.csproj  Program.cs
tests/Axon.Tests.NeuralNetwork/: Axon.Tests.NeuralNetwork.csproj  NeuralNetworkMnist.cs
(+76 files in other folders)
